--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -10,6 +10,9 @@
 // Inter Fonts
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+// Poppins Fonts (Professional & Friendly)
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
+
 // Font Awesome
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css");
 
