--- a/frontend/src/components/cliente_petsi/navbar_home.css
+++ b/frontend/src/components/cliente_petsi/navbar_home.css
@@ -1,4 +1,4 @@
-.navbar {
+.navbar2 {
   position: fixed;
   top: 0;
   width: 100%;
@@ -14,7 +14,7 @@
 }
 
 /* 🔒 CONTENEDOR DEL LOGO */
-.navbar-brand {
+.navbar2-brand {
   display: flex;
   align-items: center;
   gap: 8px;
@@ -22,31 +22,31 @@
 }
 
 /* IMAGEN */
-.navbar-logo-img {
+.navbar2-logo-img {
   width: 38px;
   height: 38px;
   display: block;
 }
 
 /* TEXTO */
-.navbar-logo-text {
+.navbar2-logo-text {
   font-size: 33px;
   font-weight: bold;
   line-height: 1;
 }
 
-.navbar-logo-text .pet-text {
+.navbar2-logo-text .pet-text {
   color: #0B5ED7 !important;
   font-weight: bold;
 }
 
-.navbar-logo-text .si-text {
+.navbar2-logo-text .si-text {
   color: #4CAF50 !important;
   font-weight: bold;
 }
 
 /* LINKS */
-.navbar-links {
+.navbar2-links {
   display: flex;
   gap: 30px;
   list-style: none;
